completed items header alignment fixed

--- a/app/src/assets/styles/style.scss
+++ b/app/src/assets/styles/style.scss
@@ -334,7 +334,8 @@ li {
 
     .completed-items{
       margin-left: -30px;
-      padding: 0 20px;
+      padding: 0 30px;
+      padding-right: 50px;
       width: calc(100% - 200px);
       position: fixed;
       bottom: 0;
